Fixed grid layout
Margin of first and last grid item shift top and bottom row layout off-center.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -172,14 +172,6 @@ html[data-theme='dark'] {
     margin: 0 12px;
   }
 
-  .gridBlock > :first-child {
-    margin-left: 0;
-  }
-
-  .gridBlock > :last-child {
-    margin-right: 0;
-  }
-
   .gridBlock .twoByGridBlock {
     flex: 1 0 40%;
   }
